# docs/swagger.yaml
@@ -71,7 +71,7 @@ paths:
       responses:
         "200":
           description: '{"code": 200, "status": "OK", "message": "Success", "data":
-            "data"}'
+            {"user_id": "UserID", "use_pin": "UsePin", "purpose": "Purpose"}}'
           schema:
             type: string
         "400":
@@ -134,6 +134,32 @@ paths:
       summary: Verify token
       tags:
       - Authentication
+  /category:
+    get:
+      consumes:
+      - application/json
+      description: List of product category based on customer
+      parameters:
+      - description: Bearer [accessing token]
+        in: header
+        name: Authorization
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: '{"code": 200, "status": "OK", "message": "Success", "data":
+            "data"}'
+          schema:
+            type: string
+        "400":
+          description: '{"code": 400, "status": "Bad request", "error": "Error"}'
+          schema:
+            type: string
+      summary: List of Store
+      tags:
+      - Product
   /order:
     post:
       consumes:
